# natural-mystic-shaders

./: .gitignore  Build  Build.rc  Makefile  Makefile.am  NEWS.md  README.md  configure.ac
am/: manifest.am  mcpack.am  original-files.am  original-rebase.am
img/: Makefile.am  screenshots.xcf.xz
m4/: mcpack.m4
orig/: Makefile.am  README.md
orig/materials/: entity.material
orig/shaders/glsl/: cloud.vertex  rain_snow.fragment  uniformInterFrameConstants.h  uniformPerFrameConstants.h
src/: Makefile.am  manifest.json  manifest.json.in  splashes.json
src/materials/: common.json  entity.material  fancy.json  fancy.material  particles.material  sad.json  sad.material  sky.material  terrain.material
src/shaders/: renderchunk.fragment
src/shaders/glsl/: cloud.fragment  cloud.vertex  natural-mystic-cloud.h  natural-mystic-color.h  natural-mystic-fog.h  natural-mystic-hacks.h  natural-mystic-light.h  natural-mystic-noise.h  natural-mystic-precision.h  natural-mystic-rain.h  natural-mystic-utils.h  natural-mystic-water.h  particles.fragment  particles.vertex  rain_snow.fragment  renderchunk.fragment  renderchunk.vertex  sky.fragment  sky.vertex  stars.vertex  sun_moon.fragment  sun_moon.vertex  uniformInterFrameConstants.h  uniformPerFrameConstants.h
src/shaders/hlsl/: cloud.fragment.hlsl  cloud.vertex.hlsl  natural-mystic-cloud.fxh  natural-mystic-color.fxh  natural-mystic-config.fxh  natural-mystic-fog.fxh  natural-mystic-hacks.fxh  natural-mystic-light.fxh  natural-mystic-noise.fxh  natural-mystic-rain.fxh  natural-mystic-water.fxh  particles.fragment.hlsl  particles.vertex.hlsl  rain_snow.fragment.hlsl  renderchunk.fragment.hlsl  renderchunk.vertex.hlsl  sky.fragment.hlsl  sky.vertex.hlsl  stars.vertex.hlsl  sun_moon.fragment.hlsl  sun_moon.vertex.hlsl
