EXTRA_DIST = \
	materials/common.json \
	materials/fancy.json \
	materials/fancy.material \
	materials/particles.material \
	materials/sad.json \
	materials/sad.material \
	materials/sky.material \
	materials/terrain.material \
	shaders/glsl/cloud.vertex \
	shaders/glsl/rain_snow.fragment \
	shaders/glsl/renderchunk.fragment \
	shaders/glsl/renderchunk.vertex \
	shaders/glsl/sky.vertex \
	shaders/glsl/uniformPerFrameConstants.h
